<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Just Meet</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_user_welcome">Welcome to Just Meet, You can start here!</string>
    <string name="user_name_hint">Name</string>
    <string name="user_phone_hint">Mobile Number</string>
    <string name="enter_code_check">Verify mobile number with SMS</string>
    <string name="user_code_hint">Enter validation code from SMS</string>
    <string name="register_button_text">Done</string>
    <string name="retry_text">No network found. Please tap image to retry.</string>
    <string name="action_about_us">About Us</string>
    <string name="action_about_us_desc">Just Meet Description</string>
    <string name="title_0">Just Meet. Plan something today.</string>
    <string name="upload_image_button_text">Done</string>
    <string name="plans_list_label_text">Upcoming Plans</string>
    <string name="homeGroupsLabel">Groups</string>
    <string name="plans_history_label_text">Plan History</string>
    <string name="view_plan_date_label">From</string>
    <string name="view_plan_date_label_till">To</string>
    <string name="view_plan_location_label">Where</string>
    <string name="view_plan_title_label">Title</string>
    <string name="view_plan_info_label">Plan Details</string>
    <string name="appointment_title_label">Title</string>
    <string name="new_plan_time_label">Date &amp; Time:</string>
    <string name="new_plan_date_hint">yyyy-mm-dd</string>
    <string name="new_plan_time_hint">HH:MM AM/PM</string>
    <string name="date_button_text">Start Date</string>
    <string name="time_button_text">Start Time</string>
    <string name="end_time_button_text">End Time</string>
    <string name="end_date_button_text">End Date</string>
    <string name="register_appointment_button_text">Create</string>
    <string name="new_location">Location</string>
    <string name="map_button_text">Map</string>
    <string name="next_step_button_text">Done</string>
    <string name="members_search_text"><![CDATA[Search & add people]]></string>
    <string name="groups_search_text"><![CDATA[Search & add groups]]></string>
    <string name="profile_name">Profile Name</string>
    <string name="profile_phone">Phone Number</string>
    <string name="member_group_text">Members</string>
    <string name="view_expense_text">Expense Report</string>
    <string name="expense_welcome">Expense Report</string>
    <string name="add_expense_text">My Expense List</string>
    <string name="add_expense_1_text">1.</string>
    <string name="expense_title">Add an expense title</string>
    <string name="expense_currency">Rs.</string>
    <string name="expense_value">0.00</string>
    <string name="add_expense_2_text">2.</string>
    <string name="add_expense_3_text">3.</string>
    <string name="add_expense_4_text">4.</string>
    <string name="add_expense_5_text">5.</string>
    <string name="expense_button_text">Submit</string>
    <string name="group_name_label">Type a Group Name</string>
    <string name="view_profile">Manage Profile</string>
    <string name="edit_appointment_button_text">Edit</string>
    <string name="edit_plan">Edit Plan</string>
    <string name="delete_plan">Delete Plan</string>
    <string name="edit_group">Edit Group</string>
    <string name="delete_group">Delete Group</string>
    <string name="leave_group">Exit Group</string>
    <string name="add_members">Add...</string>
    <string name="edit_group_button_text">Edit Group</string>
    <string name="user_search_hint"><![CDATA[Search & Invite people]]></string>
    <string name="group_search_hint"><![CDATA[Search & Invite groups]]></string>
    <string name="user_image">Profile Image</string>

</resources>
