<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="0"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/appointmentTitle"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin_15"
            android:ems="10"
            android:hint="@string/appointment_title_label"
            android:inputType="text"
            android:textSize="@dimen/text_size_18"
            android:typeface="sans" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/appointmentTimeHeader"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin_15"
            android:text="@string/new_plan_time_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold"
            android:typeface="sans" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="2"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/appointmentStartDate"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin_5"
            android:ems="10"
            android:hint="@string/new_plan_date_hint"
            android:textSize="@dimen/text_size_18"
            android:typeface="sans"></TextView>

        <Button
            android:id="@+id/appointmentStartDateButton"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginTop="@dimen/top_margin_5"
            android:background="@drawable/button"
            android:onClick="setDate"
            android:text="@string/date_button_text"
            android:textColor="@color/button_text"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold"
            android:typeface="sans" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="3"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/appointmentStartTime"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin_5"
            android:ems="10"
            android:hint="@string/new_plan_time_hint"
            android:textSize="@dimen/text_size_18"
            android:typeface="sans"></TextView>

        <Button
            android:id="@+id/appointmentStartTimeButton"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginTop="@dimen/top_margin_5"
            android:background="@drawable/button"
            android:onClick="setTime"
            android:text="@string/time_button_text"
            android:textColor="@color/button_text"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold"
            android:typeface="sans" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="4"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/appointmentEndDate"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin_5"
            android:ems="10"
            android:hint="@string/new_plan_date_hint"
            android:textSize="@dimen/text_size_18"
            android:typeface="sans"></TextView>

        <Button
            android:id="@+id/appointmentEndDatebutton"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginTop="@dimen/top_margin_5"
            android:background="@drawable/button"
            android:onClick="setEndDate"
            android:text="@string/end_date_button_text"
            android:textColor="@color/button_text"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold"
            android:typeface="sans" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="5"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/appointmentEndTime"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin_5"
            android:ems="10"
            android:hint="@string/new_plan_time_hint"
            android:textSize="@dimen/text_size_18"
            android:typeface="sans"></TextView>

        <Button
            android:id="@+id/appointmentEndTimebutton"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginTop="@dimen/top_margin_5"
            android:background="@drawable/button"
            android:onClick="setEndTime"
            android:text="@string/end_time_button_text"
            android:textColor="@color/button_text"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold"
            android:typeface="sans" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="6"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/appointmentLocation"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin_15"
            android:ems="10"
            android:hint="@string/new_location"
            android:textSize="@dimen/text_size_18"
            android:typeface="sans"></EditText>

        <Button
            android:id="@+id/appointmentLocationbutton"
            android:layout_width="80dp"
            android:layout_height="45dp"
            android:layout_marginTop="@dimen/top_margin_15"
            android:background="@drawable/button"
            android:onClick="setEndTime"
            android:text="@string/map_button_text"
            android:textColor="@color/button_text"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold"
            android:typeface="sans" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="7"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/registerAppointmentButton"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin_45"
            android:background="@drawable/create"
            android:onClick="goFromCreateToViewAppointments"
            android:text="@string/register_appointment_button_text"
            android:textColor="@color/button_text"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold"
            android:typeface="sans" />
    </LinearLayout>

</GridLayout>