<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/viewPlanTitle"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/top_margin_15"
            android:background="@drawable/image_border"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="@dimen/text_size_25"
            android:text="@string/view_plan_title_label"
            android:textStyle="bold"
            android:typeface="monospace" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="2"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/viewPlanTimeLabel"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="@drawable/image_border"
            android:gravity="center"
            android:text="@string/view_plan_date_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/viewPlanTime"
            android:layout_width="240dp"
            android:layout_height="52dp"
            android:background="@drawable/image_border"
            android:gravity="left|center_vertical"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold"
            android:typeface="sans" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="3"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/viewPlanEndTimeLabel"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="@drawable/image_border"
            android:gravity="center"
            android:text="@string/view_plan_date_label_till"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/viewPlanEndTime"
            android:layout_width="240dp"
            android:layout_height="52dp"
            android:background="@drawable/image_border"
            android:gravity="left|center_vertical"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold"
            android:typeface="sans" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="4"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/viewPlanLocationLabel"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/image_border"
            android:gravity="center"
            android:text="@string/view_plan_location_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/viewPlanLocation"
            android:layout_width="240dp"
            android:layout_height="50dp"
            android:background="@drawable/image_border"
            android:gravity="left|center_vertical"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold"
            android:typeface="sans" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="5"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/viewPlanMap"
            android:layout_width="340dp"
            android:layout_height="150dp"
            android:background="@drawable/image_border"
            android:gravity="left|center_vertical"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold"
            android:typeface="sans" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="7"
        android:gravity="top|center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rsvpLabel"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/left_margin_15"
            android:layout_marginTop="@dimen/top_margin_15"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            android:typeface="sans" />

        <Button
            android:id="@+id/rsvpPlanButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin_15"
            android:background="@drawable/create"
            android:onClick="rsvpPlan"
            android:textColor="@color/button_text"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold"
            android:typeface="sans"
            android:visibility="invisible" />
    </LinearLayout>

</GridLayout>